# goggle3

./: .gitignore  CMakeLists.txt  README.md  a  main.c  response.html  response.txt  show_search.sh
src/: alloc.cpp  alloc.h  cookie.cpp  defs.h  drawIcon.cpp  extract.cpp  gl.cpp  glBuffer.cpp  htmlToTags.cpp  icons.cpp  main.c  main.cpp  open.cpp  png.cpp  process.cpp  results.cpp  text.cpp  text.h
src/utf/: decoder.cpp  decoder.h  macros.h
